--- a/SpikaEnterprise/res/layout/activity_default.xml
+++ b/SpikaEnterprise/res/layout/activity_default.xml
@@ -24,50 +24,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/title_lobby"
+            android:text="Default Layout"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/mainContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/actionBarLayout"
         android:background="@android:color/white"
         android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/default_blue"
-            android:orientation="horizontal" >
-
-            <ToggleButton
-                android:id="@+id/groupsTab"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/selector_toggle_tab"
-                android:textColor="@color/tab_toggle"
-                android:textOff="Users"
-                android:textOn="Users" />
-
-            <ToggleButton
-                android:id="@+id/usersTab"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/selector_toggle_tab"
-                android:textColor="@color/tab_toggle"
-                android:textOff="Groups"
-                android:textOn="Groups" />
-        </LinearLayout>
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-        </android.support.v4.view.ViewPager>
     </LinearLayout>
 
 </RelativeLayout>
