--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/menu_height"
             android:layout_alignParentBottom="true"
-            android:background="@color/default_blue"
+            android:background="@color/chat_menu_gray"
             android:padding="5dp" >
 
             <ImageButton
@@ -98,7 +98,7 @@
         <SlidingDrawer
             android:id="@+id/slDrawer"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             android:layout_alignParentBottom="true"
             android:content="@+id/addContent"
             android:handle="@+id/handle"
@@ -121,43 +121,106 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/chat_menu_gray"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingBottom="20dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="20dp"
-                android:weightSum="2" >
+                android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/photo"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/tab_mask"
-                    android:gravity="center"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingTop="10dp"
-                    android:text="@string/photo"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:orientation="horizontal"
+                    android:weightSum="3" >
 
-                <TextView
-                    android:id="@+id/gallery"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/tab_mask"
-                    android:gravity="center"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingTop="10dp"
-                    android:text="@string/gallery"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    <Button
+                        android:id="@+id/photo"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/more_square_bg"
+                        android:drawableTop="@drawable/camera_more_icon_selector"
+                        android:paddingTop="20dp"
+                        android:text="@string/camera"
+                        android:textColor="@android:color/black" />
+
+                    <Button
+                        android:id="@+id/gallery"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/more_square_bg"
+                        android:drawableTop="@drawable/albums_more_icon_selector"
+                        android:paddingTop="20dp"
+                        android:text="@string/gallery"
+                        android:textColor="@android:color/black" />
+
+                    <Button
+                        android:id="@+id/btnVideo"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/more_square_bg"
+                        android:drawableTop="@drawable/video_more_icon_selector"
+                        android:paddingTop="20dp"
+                        android:text="@string/video"
+                        android:textColor="@android:color/black" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:orientation="horizontal"
+                    android:weightSum="3" >
+
+                    <Button
+                        android:id="@+id/btnEmoji"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_weight="1"
+                        android:visibility="invisible"
+                        android:background="@drawable/more_square_bg"
+                        android:paddingTop="20dp" />
+
+                    <Button
+                        android:id="@+id/btnLocation"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/more_square_bg"
+                        android:drawableTop="@drawable/location_more_icon_selector"
+                        android:paddingTop="20dp"
+                        android:text="@string/location"
+                        android:textColor="@android:color/black" />
+
+                    <Button
+                        android:id="@+id/btnRecord"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/more_square_bg"
+                        android:drawableTop="@drawable/mic_voice_icon_selector"
+                        android:paddingTop="20dp"
+                        android:text="@string/record"
+                        android:textColor="@android:color/black" />
+                </LinearLayout>
             </LinearLayout>
         </SlidingDrawer>
     </RelativeLayout>
