--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -54,12 +54,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/chatLayout"
+            android:animationCache="false"
             android:background="@color/transparent"
-            android:divider="@null"
+            android:cacheColorHint="#00000000"
+            android:divider="@color/transparent"
             android:dividerHeight="0dp"
             android:fadingEdge="none"
             android:listSelector="@color/transparent"
-            android:scrollbars="none" />
+            android:scrollbars="none"
+            android:scrollingCache="false"
+            android:smoothScrollbar="true" />
 
         <RelativeLayout
             android:id="@+id/chatLayout"
@@ -189,9 +193,9 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="2dp"
                         android:layout_weight="1"
-                        android:visibility="invisible"
                         android:background="@drawable/more_square_bg"
-                        android:paddingTop="20dp" />
+                        android:paddingTop="20dp"
+                        android:visibility="invisible" />
 
                     <Button
                         android:id="@+id/btnLocation"
