--- a/SpikaEnterprise/res/layout/activity_photo.xml
+++ b/SpikaEnterprise/res/layout/activity_photo.xml
@@ -2,7 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relativeLayout_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/default_blue" >
+
+    <ImageButton
+        android:id="@+id/goBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_transp_blue"
+        android:contentDescription="@null"
+        android:padding="20dp"
+        android:src="@drawable/btn_back" />
 
     <RelativeLayout
         android:id="@+id/imageLayout"
