--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -1,16 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res/com.clover.spika.enterprise.chat.views"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp"
-    android:background="@color/transparent" >
+    android:background="@color/transparent"
+    android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/loading_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:paddingLeft="0dp"
         android:paddingRight="0dp" >
 
@@ -47,7 +47,6 @@
         android:id="@+id/dateSeparator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/loading_bar"
         android:layout_margin="10dp" >
 
         <View
@@ -79,125 +78,165 @@
     <RelativeLayout
         android:id="@+id/messagesWholeLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dateSeparator" >
+        android:layout_height="wrap_content" >
 
         <!-- start: Me message layout -->
 
-        <RelativeLayout
-            android:id="@+id/meItemMsgLayout"
+        <LinearLayout
+            android:id="@+id/defaultMsgLayoutMe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" >
 
-            <!-- start: MessageLayout -->
-
-            <LinearLayout
-                android:id="@+id/defaultMsgLayoutMe"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp" >
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/timeMe"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp" >
+                    android:layout_alignParentLeft="true"
+                    android:textColor="@color/text_time_gray"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                        android:id="@+id/timeMe"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:textColor="@color/text_time_gray"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/mePersonName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/default_blue"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
 
-                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                        android:id="@+id/mePersonName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:textColor="@color/default_blue"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+            <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                android:id="@+id/meMsgContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
 
-                <include layout="@layout/item_chat_text_me" />
+            <ImageView
+                android:id="@+id/meListenSound"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="right"
+                android:contentDescription="@null"
+                android:src="@drawable/icon_voice" />
 
-                <include layout="@layout/item_chat_sound_me" />
+            <ImageView
+                android:id="@+id/meWatchVideo"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="right"
+                android:contentDescription="@null"
+                android:src="@drawable/icon_video" />
 
-                <include layout="@layout/item_chat_video_me" />
+            <ImageView
+                android:id="@+id/meViewLocation"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="right"
+                android:contentDescription="@null"
+                android:src="@drawable/icon_location" />
 
-                <include layout="@layout/item_chat_location_me" />
-
-                <include layout="@layout/item_chat_image_me" />
-            </LinearLayout>
-
-            <!-- end: MessageLayout -->
-        </RelativeLayout>
+            <ImageView
+                android:id="@+id/meViewImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="right"
+                android:contentDescription="@null" />
+        </LinearLayout>
 
         <!-- end: Me message layout -->
 
 
         <!-- start: You message layout -->
 
-        <RelativeLayout
-            android:id="@+id/youItemMsgLayout"
+        <LinearLayout
+            android:id="@+id/defaultMsgLayoutYou"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="visible" >
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" >
 
-            <!-- start: MessageLayout -->
-
-            <LinearLayout
-                android:id="@+id/defaultMsgLayoutYou"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp" >
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/timeYou"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp" >
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/text_time_gray"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                        android:id="@+id/timeYou"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:textColor="@color/text_time_gray"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/youPersonName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:textColor="@color/default_blue"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
 
-                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                        android:id="@+id/youPersonName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:textColor="@color/default_blue"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+            <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                android:id="@+id/youMsgContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
 
-                <include layout="@layout/item_chat_text_you" />
+            <ImageView
+                android:id="@+id/youListenSound"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="left"
+                android:contentDescription="@null"
+                android:src="@drawable/icon_voice" />
 
-                <include layout="@layout/item_chat_sound_you" />
+            <ImageView
+                android:id="@+id/youWatchVideo"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="left"
+                android:contentDescription="@null"
+                android:src="@drawable/icon_video" />
 
-                <include layout="@layout/item_chat_video_you" />
+            <ImageView
+                android:id="@+id/youViewLocation"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="left"
+                android:contentDescription="@null"
+                android:src="@drawable/icon_location" />
 
-                <include layout="@layout/item_chat_location_you" />
-
-                <include layout="@layout/item_chat_image_you" />
-            </LinearLayout>
-
-            <!-- end: MessageLayout -->
-
-        </RelativeLayout>
+            <ImageView
+                android:id="@+id/youViewImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="left"
+                android:contentDescription="@null" />
+        </LinearLayout>
 
         <!-- end: You message layout -->
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
