created passcode checker

--- a/SpikaEnterprise/res/layout/activity_passcode.xml
+++ b/SpikaEnterprise/res/layout/activity_passcode.xml
@@ -3,21 +3,173 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@color/default_blue">
+    android:background="@color/default_blue"
+    android:padding="16dp">
 
-    <EditText
-        android:id="@+id/edit_text_passcode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number"/>
-
-    <Button
+    <LinearLayout
+        android:id="@+id/linear_layout_characters_in_passcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edit_text_passcode"
         android:layout_centerHorizontal="true"
-        android:text="Submit"
-        android:onClick="onPasscodeExecute"/>
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/circle_with_white_border"/>
+
+        <View
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/circle_with_white_border"/>
+
+        <View
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/circle_with_white_border"/>
+
+        <View
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/circle_with_white_border"/>
+
+    </LinearLayout>
+
+    <Space
+        android:id="@+id/space_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_alignParentBottom="true"/>
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/space_bottom"
+        android:layout_marginTop="20dp"
+        android:columnCount="3"
+        android:useDefaultMargins="true">
+
+        <Button
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="1"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_width="75dp"
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="2"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_width="75dp"
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="3"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_height="75dp"
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="4"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="5"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="6"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_height="75dp"
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="7"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="8"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="9"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+        <Button
+            android:layout_height="75dp"
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="Delete"
+            android:textColor="@color/white_selector"
+            android:textSize="20sp" />
+
+        <Button
+            android:layout_columnSpan="1"
+            android:layout_gravity="fill"
+            android:background="@drawable/circle_with_white_border"
+            android:gravity="center"
+            android:onClick="onPasscodeExecute"
+            android:text="0"
+            android:textColor="@color/white_selector"
+            android:textSize="45sp" />
+
+    </GridLayout>
 
 </RelativeLayout>
