finished passcode logic, without error graphics

--- a/SpikaEnterprise/res/layout/activity_passcode.xml
+++ b/SpikaEnterprise/res/layout/activity_passcode.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_blue"
     android:padding="16dp">
+
+    <ImageButton
+        android:id="@+id/goBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_back"
+        android:background="@null"
+        android:contentDescription="@null"
+        android:onClick="exitActivity"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
     <LinearLayout
         android:id="@+id/linear_layout_characters_in_passcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/goBack"
         android:orientation="horizontal">
 
         <View
