--- a/SpikaEnterprise/res/layout/dialog_chose_cam_rec.xml
+++ b/SpikaEnterprise/res/layout/dialog_chose_cam_rec.xml
@@ -21,7 +21,7 @@
             android:src="@drawable/camera_more_icon_selector" />
 
         <ImageButton
-            android:id="@+id/gallery"
+            android:id="@+id/galleryImageButton"
             android:contentDescription="@null"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
