--- a/SpikaEnterprise/res/layout/activity_record_audio.xml
+++ b/SpikaEnterprise/res/layout/activity_record_audio.xml
@@ -59,10 +59,11 @@
             android:id="@+id/recCircle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
             android:layout_centerInParent="true"
+            android:clickable="false"
             android:contentDescription="@null"
-            android:src="@drawable/icon_audio_rec_on" />
+            android:src="@drawable/icon_audio_rec_on"
+            android:visibility="invisible" />
 
         <com.clover.spika.enterprise.chat.views.RobotoThinChronometer
             android:id="@+id/recordTime"
